--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-beautifulsoup4==4.9.1
+ beautifulsoup4==4.9.1
 brotlipy==0.7.0
 bs4==0.0.1
 chardet==3.0.4
@@ -34,3 +34,4 @@ urllib3==1.25.11
 webdriver-manager==3.3.0
 Werkzeug==1.0.1
 wincertstore==0.2
+gunicorn==20.0.4
